# pacti

./: .gitignore  .pdm.toml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  IoContract.py  IoContracts.py  LICENSE  Makefile  PolyhedralContracts.py  PolyhedralTerm.py  PolyhedralTerms.py  README.md  README.rst  Term.py  coverage.json  designvar.h  duties.py  environment.yml  example.json  example_quotient.json  gear.py  iocontract.h  iocontract.py  jupytext.toml  makefile  mathset.h  mkdocs.yml  poly.cpp  poly.py  polyhedralterm.py  pylintrc  pyproject.toml  ratio.py  result.json  setup.cfg  term.h  test_polyhedral_terms.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  pacti_dev_review.yml  pacti_development.yml  pacti_pre_production.yml  pacti_production.yml  python-publish.yml  release.yml  test_install_and_package.yml
case_studies/2d-plots/: plot.ipynb
case_studies/biocircuit_specifications/: Circuits with marionette strain.ipynb  Specification based synthetic biology.ipynb  dCas9_repression.json  lint_test.py  marionette_data.csv  rfp_control.json  specification_based_synthetic_biology.ipynb  synbio_utils.py
case_studies/digital_signal_processing/: dsp_wl.ipynb  dsp_wl_backup.ipynb  jupyter_debug.py  tool.py
case_studies/evaluating_perception/: README.md  case_study.ipynb  case_study.py  case_study_new.ipynb  construct_parametric_chain.py  design_controller4.py  empty_controller.py  evaluate_perception.ipynb  evaluating_classification_algorithms.ipynb  lb.pkl  lower_bounds.ipynb  main_case_study_notebook.ipynb  not_ped_controller.py  ped_controller.py  recompute.ipynb  saved_results.ipynb  simple_evaluating_perception.ipynb  simple_script.ipynb  utils.py
case_studies/evaluating_perception/data/: lbempty.pkl  lbobj.pkl  points_empty_lb0.6_ub0.999_vmax2_N6rand.pkl  points_obj_lb0.3_ub0.999_vmax2_N6rand.pkl  points_ped_lb0.6_ub0.999_vmax1_N6rand.pkl  points_ped_lb0.6_ub0.999_vmax2_N6rand.pkl  points_ped_lb0.6_ub0.999_vmax2rand.pkl  points_ped_lb0.6_ub0.999_vmax5_N15rand.pkl
case_studies/evaluating_perception/models/: env_MC.nm  model_MC.nm  pedestrian.nm
case_studies/evaluating_perception/notebooks/: lower_bounds.ipynb  saved_results.ipynb
case_studies/evaluating_perception/results/: points_obj_lb0.6_ub0.999_vmax2_N6rand.pkl
case_studies/evaluating_perception/saved_plots/: points_empty_lb0.6_ub0.999_v.textClipping
case_studies/evaluating_perception/utils/: empty_controller.py  not_ped_controller.py  ped_controller.py
case_studies/mars_entry_descent_landing/: README.md  edl.py  images.json  mars-edl-ranges.ipynb  mars_edl-1st-encoding.ipynb  mars_edl-2nd-encoding.ipynb  mars_edl.ipynb  mars_edl_2nd_encoding-with-gap.ipynb  mars_edl_2nd_encoding.ipynb  mars_edl_3rd_encoding.ipynb
case_studies/mars_entry_descent_landing/figures/: segment-contracts.drawio
case_studies/multiagent_coordination/: multiagent.ipynb
case_studies/polyhedra_contracts/: polyhedral-contract-example.py  polyhedral-contract-example3.py  polyhedral-term-examples.py
case_studies/space_mission/: 3dploy.ipynb  README.md  analysis_results.ipynb  analysis_results1-20steps.ipynb  analysis_results1-5steps.ipynb  analysis_results1.ipynb  analysis_results2.ipynb  contract_utils.py  dsn_charging-with-sbo.json  generators.py  hyper-scenarios.py  hyper_scenarios.py  parse.py  parsing.ipynb  plot_utils.py  power-range.ipynb  power.ipynb  power_composition_problem.json  space_mission.ipynb  space_mission_3viewpoints.ipynb  space_mission_navigation.ipynb  space_mission_power.ipynb  space_mission_science.ipynb  space_mission_thermal.ipynb  tests.ipynb
case_studies/topologies/: main.py
case_studies/uav_topologies/: topologies.ipynb
case_studies/uav_topologies_generation/: topologies.ipynb
config/: coverage.ini  flake8.ini  mypy.ini  pytest.ini  tox.ini
cpp/: contracttool.cpp  iocontract.cpp
doc/source/: api.rst  conf.py
docs/: Polyhedral.md  case_studies.md  command-line-interface.md  credits.md  dist-README.md  expression.html  gen_credits.py  gen_ref_nav.py  getting_started.ipynb  getting_started.md  index.md  installing.md  iocontract.md  polyhedral-term-syntax.md  uses.ipynb
docs/css/: material.css
docs/source/: api.rst  conf.py  index.rst
examples/: AND logic gate.ipynb  AND_logic_gate.ipynb  Quotient gives feedback amplifier.ipynb  alice_proptest.py  and_comp.json  contracts_example.txt  corridor_example.json  dynamic_example.json  dynamics_initial.json  example-eda.py  example.json  example_designerror.json  example_indep.json  example_quotient.json  example_quotient2.json  example_quotient_fb.json  issue79.json  parse_from_txt.py  plotting.py  proptest.py  resource_sharing.html  resource_sharing.ipynb  sequential_circuit_parameters.ipynb  smt-example.py
examples/.ipynb_checkpoints/: AND logic gate-checkpoint.ipynb
examples/dsp/: example.json  example1.json  example1_buggy.json  example1_buggy_out.json  example1_out.json  gen_example1.py  tool.py
examples/dyn/: dynamic_example.json  dynamic_example2.json
examples/fuel_system/: fuel_system_test.py  fuel_system_v1.py  utils.py
examples/grammar/: expressions.py  from_string.py
examples/issues/: 126.py  151.py  171.py  195.py  203.py  204.py  208-n.py  208.py  244.json  244.py  264.py  355.py  356.py  dsn_charging-with-sbo.json  issue208.json
examples/wip/: contract_satisfaction.py
scripts/: gen_credits.py  multirun.sh
src/gear/: __init__.py  __main__.py  cli.py  gear.py  iocontract.py  loaders.py  polyhedralterm.py  utils.py
src/pacti/: __init__.py  __version__.py  cli.py
tests/: example.json  test_contains_behavior.py  test_digital_signal_processing.py  test_examples.py  test_fileio.py  test_iocontract.py  test_multiple_composition.py  test_polyhedral_compound_contract.py  test_polyhedral_contract.py  test_polyhedral_contract_simplification.py  test_polyhedral_contract_syntax.py  test_polyhedral_plotting.py  test_polyhedral_terms.py  test_py_loaders.py
tests/grammar/: test_abs_or_term.py  test_absolute_term_list.py  test_expressions.py  test_from_string.py  test_term_list.py
(+157 files in other folders)
