[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
name = "pacti"
description = "pacti-description"
authors = [{name = "pacti-authors-name", email = "pacti-authors-email"}]
license = "BSD-2-Clause"
readme = "README.md"
keywords = []
dynamic = ["version"]
dependencies = [
    "click>=8.1.3",
    "scipy>=1.10.0",
    "pip>=22.3.1",
    "aenum>=3.1.11",
    #    "jupyter>=1.0.0",
    #    "nbconvert>=6.5.4",
    #    "jupyterlab-templates>=0.3.2",
    "sympy>=1.11.1",
    "numpy>=1.24.1",
    "matplotlib>=3.6.2",
    "networkx>=3.0",
]
requires-python = ">=3.8, <=3.11.1"

[project.scripts]
pacti = "pacti.cli:main"

[project.optional-dependencies]
[tool.pdm]
version = {source = "scm"}
package-dir = "src"


[tool.pdm.build]
package-dir = "src"
editable-backend = "editables"

[tool.pdm.dev-dependencies]
duty = ["duty>=0.7"]
docs = [
    "mkdocs>=1.3",
    "mkdocs-jupyter>=0.22.0",
    "mkdocs-coverage>=0.2",
    "mkdocs-gen-files>=0.3",
    "mkdocs-literate-nav>=0.4",
    "mkdocs-material>=7.3",
    "mkdocs-section-index>=0.3",
    "mkdocstrings[python]>=0.18",
    "markdown-callouts>=0.2",
    "markdown-exec>=0.5",
    "toml>=0.10",
]
format = [
    "autoflake>=1.4",
    "black>=21.10b0",
    "isort>=5.10",
]
maintain = [
    "git-changelog>=0.4",
    "urlopen>=1.0.0",
]
quality = [
    "darglint>=1.8",
    "flake8>=5.0.0",
    "flake8-bandit",
    "flake8-black",
    "flake8-bugbear",
    "flake8-builtins",
    "flake8-comprehensions",
    "flake8-docstrings",
    "flake8-pytest-style",
    "flake8-string-format",
    "flake8-tidy-imports",
    "flake8-variables-names",
    "pep8-naming",
    "wps-light",
]
tests = [
    "pytest>=6.2",
    "pytest-cov>=3.0",
    "pytest-randomly>=3.10",
    "pytest-xdist>=2.4",
]
typing = [
    "mypy>=0.910",
    "types-markdown>=3.3",
    "types-toml>=0.10",
]
security = ["safety>=2"]
dev = [
    "certifi>=2022.9.24",
    "tox-pdm>=0.6.1",
]

[tool.black]
line-length = 120
exclude = "tests/fixtures"

[tool.isort]
line_length = 120
not_skip = "__init__.py"
multi_line_output = 3
force_single_line = false
balanced_wrapping = true
default_section = "THIRDPARTY"
known_first_party = "pacti"
include_trailing_comma = true
