[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
name = "Pacti"
description = "A package for compositional system analysis and design"
authors = [{name = "Pacti developers", email = "info@pacti.org"}]
license = "BSD-3-Clause"
readme = "docs/dist-README.md"
classifiers = [
    "Topic :: Scientific/Engineering"
]
keywords = ["system design", "contracts", "compositional"]
dynamic = ["version"]
# version = "1.0.0-alpha"
dependencies = [
    "scipy>=1.10.0",
    "sympy>=1.11.1",
    "numpy>=1.24.1",
    "matplotlib>=3.6.2",
    "typing-extensions>=4.5.0",
    "pyparsing>=3.0.9",
    "pyeda>=0.29.0",
    "ipdb>=0.13.13",
    "networkx>=3.1",
    "pygraphviz>=1.11",
    "z3-solver>=4.15.0.0",
]
requires-python = ">=3.8, <3.12"


[project.urls]
repository    = "https://github.com/pacti-org/pacti"
documentation = "https://www.pacti.org"
"Bug Tracker" = "https://github.com/pacti-org/pacti/issues"


[tool.pdm]
package-dir = "src"
version = { source = "file", path = "src/pacti/__version__.py" }

[tool.pdm.build]
package-dir = "src"
editable-backend = "editables"

[tool.pdm.dev-dependencies]
duty = ["duty>=0.7"]

format = [
    "autoflake>=1.4",
    "black>=21.10b0",
    "isort>=5.10",
]
maintain = [
    "git-changelog>=0.4",
    "urlopen>=1.0.0",
]
quality = [
    "darglint>=1.8",
    "flake8>=5.0.0",
    "flake8-bandit",
    "flake8-black",
    "flake8-bugbear",
    "flake8-builtins",
    "flake8-comprehensions",
    "flake8-docstrings",
    "flake8-pytest-style",
    "flake8-string-format",
    "flake8-tidy-imports",
    "flake8-variables-names",
    "pep8-naming",
    "wps-light",
    "nbqa>=1.6.3",
]
tests = [
    "pytest>=6.2",
    "pytest-cov>=3.0",
    "pytest-randomly>=3.10",
    "pytest-xdist>=2.4",
]
typing = [
    "mypy>=0.910",
    "types-markdown>=3.3",
    "types-toml>=0.10",
]
security = ["safety>=2"]
dev = [
    "certifi>=2022.9.24",
    "tox>=4.4.7",
    "editables>=0.3",
    "ipykernel"
]

[tool.black]
line-length = 120
exclude = "tests/fixtures"

[tool.isort]
line_length = 120
skip = ["__init__.py"]
#not_skip = "__init__.py"
multi_line_output = 3
force_single_line = false
balanced_wrapping = true
default_section = "THIRDPARTY"
known_first_party = "pacti"
include_trailing_comma = true
