[metadata]
name = gear
version = 0.0.1


[options]
packages = find:
package_dir = = src
include_package_data = True
python_requires = >= 3.7
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src



[options.entry_points]
console_scripts =
    gear = gear.gear:main


